[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Bots/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Sfx/zm/zm_die.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sfx/zm/zm_hit2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/decals/body2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/decals/body1.png" type="Texture" id=6]

[node name="Zombie" groups=[
"Monster",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
melee_damage = 35.0

[node name="Model" parent="." index="0"]
sk_name = "t1"

[node name="die" parent="." index="5"]
stream = ExtResource( 3 )
attenuation = 0.450625

[node name="CollisionShape2D" parent="close_range" index="0"]
disabled = true

[node name="navTimer" type="Timer" parent="." index="7"]
wait_time = 1.2

[node name="zAttack" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 4 )

[node name="body" type="Sprite" parent="." index="9"]
visible = false
position = Vector2( -7.68243, -10.2442 )
texture = ExtResource( 6 )

[node name="body2" type="Sprite" parent="." index="10"]
visible = false
position = Vector2( -7.68243, -10.2442 )
texture = ExtResource( 5 )
[connection signal="timeout" from="navTimer" to="." method="_on_navTimer_timeout"]
